# climo-data-importer

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py  migration.py
tests/: END_TO_END_TEST_SUMMARY.md  TEST_DOCUMENTATION.md  conftest.py  test_end_to_end.py
tests/data/: README.md
tests/data/composite_station_info/: ppt_composite_station_file.csv
tests/data/csv/ppt/1971_2000/: 1002_ppt_1971_2000.csv  10510_ppt_1971_2000.csv  10530_ppt_1971_2000.csv  11371_ppt_1971_2000.csv  11379_ppt_1971_2000.csv  11382_ppt_1971_2000.csv  11622_ppt_1971_2000.csv  404_ppt_1971_2000.csv  406_ppt_1971_2000.csv
tests/data/csv/ppt/1981_2010/: 1002_ppt_1981_2010.csv  10510_ppt_1981_2010.csv  10530_ppt_1981_2010.csv  11370_ppt_1981_2010.csv  11513_ppt_1981_2010.csv  11621_ppt_1981_2010.csv  404_ppt_1981_2010.csv  406_ppt_1981_2010.csv
tests/data/csv/ppt/1991_2020/: 1002_ppt_1991_2020.csv  10510_ppt_1991_2020.csv  10530_ppt_1991_2020.csv  11371_ppt_1991_2020.csv  11622_ppt_1991_2020.csv  406_ppt_1991_2020.csv
tests/test_main/: __init__.py  conftest.py  test_file_reading.py  test_generate_climatological_stations.py  test_generate_periods.py  test_generate_station.py  test_generate_station_histories.py  test_generate_value_data.py  test_generate_variables.py  test_history_line.py  test_integration.py  test_station_data_line.py
